debci (0.5.1) UNRELEASED; urgency=medium

  * etc/schroot/debci/fstab: improve schroot isolation
    - do not share /tmp with host
    - mount tmpfs at /dev/shm as quite some software needs it

 -- Antonio Terceiro <terceiro@debian.org>  Sun, 30 Mar 2014 15:18:11 -0300

debci (0.5.0) unstable; urgency=medium

  [ Martin Pitt ]
  * Add missing dctrl-tools dependency.
  * Use "dpkg --print-architecture" instead of dpkg-architecture, to avoid a
    dependency on dpkg-dev and the (undeclared) dependency on gcc.
  * Fix grep_packages() to actually use the configured architecture instead of
    the host architecture.
  * Add --help output to debci-{list-packages,setup,test}, instead of failing
    with an "usage: not found" error.

  [ Antonio Terceiro ]
  * Initial upload to Debian (Closes: #736416)
    The API is not set yet, but I am uploading anyway to allow for early
    testing, improve contribution opportunities, to get a BTS etc.
  * Updated documentation
    - instructions for setting up a development instance.
    - Point traffic at debian-qa
  * modularize behaviour of a backend
    - existing implementation extracted as the `schroot` backend
    - added a `fake` backend that helps with testing
  * schroot backend optimization: always run with eatmydata
  * Add blame support: when tests of a package start failing after some
    dependencies were updated, those dependencies will be "blamed" for the
    failure.
  * improvements on autopkgtest usage:
    - debci now uses the autopkgtest support for downloading the source
      package instead of downloading manually and them calling adt-run
    - debci now differentiates between the non-zero adt-run exit codes, so
      that skipped tests will not count as failures. Also added a `tmpfail`
      status, to be used when for some reason the tests could not be run for
      some external failure (e.g. mirror failures, broken dependencies etc).